# Helix

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
cmake/Modules/: FindCUnit.cmake
include/data_structures/: array.h  arrayrep.h
src/: main.c
src/data_structures/: array.c
test/: test_array.c
